Set up SQLite for audition form

--- a/audition-form.html
+++ b/audition-form.html
@@ -334,7 +334,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="form-floating">
-            <input type="text" class="form-control" id="forename" placeholder="forename" minlength="2" maxlength="30"
+            <input type="text" class="form-control" id="forename" name="forename" placeholder="forename" minlength="2" maxlength="30"
                    required>
             <label for="forename">Forename(s) *</label>
           </div>
@@ -348,7 +348,6 @@
         </div>
         <div class="col-sm">
           <div class="form-floating">
-
             <input type="text" class="form-control" id="dob" placeholder="dob" required>
             <label for="dob">Date of Birth (Please use the format dd-mm-yyyy) *</label>
           </div>
