--- a/future-events.html
+++ b/future-events.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Future Events</title>
 
-  <!-- Link to the CSS Stylesheet used -->
+  <!-- Link to the base CSS Stylesheet used -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+  <!-- Link to the 'Future Events' CSS Stylesheet used -->
   <link rel="stylesheet" type="text/css" href="css/future-events.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
