--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <title>Newcastle Uni G&S Society</title>
 
-  <!-- Link to the CSS Stylesheet used -->
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <!-- Link to the base CSS Stylesheet used -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+
+  <!-- No custom stylesheets used -->
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Linking Bootstrap to the page -->
@@ -168,7 +173,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 
 <!-- Footer including copyright info for the website -->
