--- a/all-shows.html
+++ b/all-shows.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Our History</title>
 
-  <!-- Link to the CSS Stylesheet used -->
+  <!-- Link to the base CSS Stylesheet used -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+  <!-- Link to the 'All-Shows' CSS Stylesheet used -->
   <link rel="stylesheet" type="text/css" href="css/all-shows.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
