--- a/audition-info.html
+++ b/audition-info.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <title>Audition Info</title>
 
-  <!-- Link to the CSS Stylesheet used -->
-  <link rel="stylesheet" type="text/css" href="css/audition-info.css">
+  <!-- Link to the base CSS Stylesheet used -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+
+  <!-- No custom stylesheets used -->
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Linking Bootstrap to the page -->
